--- a/tmux/mac/.tmux.conf
+++ b/tmux/mac/.tmux.conf
@@ -1,7 +1,7 @@
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-m
-bind-key C-m send-prefix
+set-option -g prefix C-c
+bind-key C-c send-prefix
 
 # split panes using | and -
 bind | split-window -h
@@ -13,10 +13,8 @@ unbind %
 bind r source-file ~/.tmux.conf
 
 # switch panes using Alt-arrow without prefix
-bind -n C-Left select-pane -L
-bind -n C-Right select-pane -R
-bind -n C-Up select-pane -U
-bind -n C-Down select-pane -D
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
-# Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
